# KevinASC4.github.io

./: CS677DemoFile.html  CS677DemoFile.py  README.md  _quarto.yml  about.html  about.qmd  bostonUniversity.html  bostonUniversity.qmd  index.html  index.qmd  nyt.qmd  project.html  project.qmd  pyproject.toml  requirements.txt  search.json  sitemap.xml  syracuseUniversity.html  syracuseUniversity.qmd  website.css  website.js
.github/workflows/: quarto-publish.yml
_site/: about.html  bostonUniversity.html  index.html  nyt.html  project.html  robots.txt  search.json  sitemap.xml  syracuseUniversity.html
workflows/: Quarto-publish.yml
